2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>

	* UPGRADE.txt (Parking): add note about new parking behavior (issue #5532)

	* many files: more Cygwin compatibility, and proper getloadavg() prototype/macro (issue #5569)

	* include/asterisk/lock.h (__ast_pthread_mutex_lock): correct build with DETECT_DEADLOCKS defined (issue #5570)

2005-11-07  Russell Bryant  <russell@digium.com>

	* apps/app_queue.c: upgrade to new arg/option API and implement priority jumping control (issue #5580)
	* many files: Add missing include of stdio.h, and remove some duplicate and unused header includes

	* include/asterisk/app.h: Increment the arg_index in the options structure to fix applicaiton options that have arguments to them

2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>

	* cryptostub.c: include necessary headers
	* include/asterisk/crypto.h: don't include unnecessary headers

	* manager.c (action_setvar): add support for setting global variables (issue #5571)

	* Makefile: correct cross-compilation issue introduced in Cygwin patches (issue #5572)

	* apps/app_voicemail.c: upgrade to new arg/option API and implement priority jumping control (issue #5649)

	* asterisk.c (main): setpriority() failure is not a reason to stop the process (issue #5581)

	* say.c (ast_say_date_with_format_da): say hours properly (issue #5576)

	* manager.c (astman_get_variables): restore old multiple-variable behavior for "Variable" header (issue #5585)

	* many files: don't check for NULL before calling ast_strlen_zero, it can do it itself (issue #5648)

	* pbx.c (handle_show_hints): use proper state-to-string function for hint state (issue #5583)

	* rtp.c: use unsigned format for debug packet output (issue #5595)

	* asterisk.c (main): force a dnsmgr background refresh after all other modules are initialized (issue #5599)
	* dnsmgr.c: add ability to start a background refresh on demand (issue #5599)
