@@ -22,6 +22,7 @@
  * \ingroup applications
  */
 
+#include <stdio.h>
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
